fix: make tag expression parser Java 8 compatible